--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -33,11 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boston housing dataset has 489 data points with 4 variables each.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -83,26 +89,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for Boston housing dataset:\n",
+      "\n",
+      "Minimum price: $105,000.00\n",
+      "Maximum price: $1,024,800.00\n",
+      "Mean price: $454,342.94\n",
+      "Median price $438,900.00\n",
+      "Standard deviation of prices: $165,340.28\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = None\n",
+    "minimum_price = prices.min()\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = None\n",
+    "maximum_price = prices.max()\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = None\n",
+    "mean_price = prices.mean()\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = None\n",
+    "median_price = prices.median()\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = None\n",
+    "std_price = prices.std()\n",
     "\n",
     "# Show the calculated statistics\n",
     "print \"Statistics for Boston housing dataset:\\n\"\n",
@@ -653,21 +671,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
