--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -154,7 +154,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: ** \n",
+    "**RM:**\n",
+    "As RM value increases, MEDV value increases. There will be additional rooms, thereby the square feet of the home would be high, leading to high price.\n",
+    "\n",
+    "**LSTAT:**\n",
+    "As LSTAT increases, MEDV would decrease. Because the community will not look posch. So it will lose its value.\n",
+    "\n",
+    "**PTRATIO:**\n",
+    "As PTRATIO increases, MEDV decreases. A high PTRATIO means there are more students per teacher, leading to lack of attention and care."
    ]
   },
   {
@@ -183,20 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# TODO: Import 'r2_score'\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
     "def performance_metric(y_true, y_predict):\n",
     "    \"\"\" Calculates and returns the performance score between \n",
     "        true and predicted values based on the metric chosen. \"\"\"\n",
-    "    \n",
+    "        \n",
     "    # TODO: Calculate the performance score between 'y_true' and 'y_predict'\n",
-    "    score = None\n",
+    "    score = r2_score(y_true,y_predict)\n",
     "    \n",
     "    # Return the score\n",
     "    return score"
