--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -503,8 +503,8 @@
     "#### Grid Search Technique:\n",
     "* If there is more than one hyper-parameter, the best way to find the suitable one is to form a grid with all the possible values of hyper-parameter, and tabulate the F1-score of each of them. \n",
     "* Grid Search can be used to optimize the learning algorithm by the value of the F1 score obtained. High F1 score indicates a good model.\n",
-    "\n",
     "#### Example:\n",
+    "\n",
     "<i>Support Vector Machine</i> has more than one hyper-parameter like : <i>kernel, gamma</i>. <i>Kernel</i> can take values like <i>Linear/Polynomial</i>. <i>Gamma</i> can take exponential values. We can form a table with two possibilities of <i>kernel</i> and many different possibilities of <i>gamma</i>, and find the one with the highest F1 score. This is how we optimize an svm."
    ]
   },
@@ -527,7 +527,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "#### k-fold cross-validation technique:\n",
+    "\n",
+    "This involves splitting the dataset into k buckets. Then our model is trained k times, each time having a different bucket for testing and the remaining buckets for traning. Then we average our results to get the final model. \n",
+    "\n",
+    "For example, if the size of the dataset is 12, and k is 4, we will have 4 buckets of size 12/4 = 3.\n",
+    "\n",
+    "Indices of our dataset: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11\n",
+    "\n",
+    "<table style=\"width:50%\">\n",
+    "  <tr>\n",
+    "    <th>Run Number</th>\n",
+    "    <th>Indices of Training set</th>\n",
+    "    <th>Indices of Testing set</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Run #1\n",
+    "    <td>3, 4, 5, 6, 7, 8, 9, 10, 11</td>\n",
+    "    <td>0, 1, 2</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Run #2</td>\n",
+    "    <td>0, 1, 2, 6, 7, 8, 9, 10, 11</td>\n",
+    "    <td>3, 4, 5</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Run #3</td>\n",
+    "    <td>0, 1, 2, 3, 4, 5, 9, 10, 11</td>\n",
+    "    <td>6, 7, 8</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>Run #4</td>\n",
+    "    <td>0, 1, 2, 3, 4, 5, 6, 7, 8</td>\n",
+    "    <td>9, 10, 11</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "\n",
+    "#### Benefits:\n",
+    "\n",
+    "In traditional approach, we will be having fixed training, cross-validation and testing sets. In big data sets this will not be a proble. But in small datasets, after splitting like this, we will not be having enough data to train our model. \n",
+    "\n",
+    "So we go for k fold cross validation in which we don't have a fixed set for cross-validation. The data set will be split into training and testing sets. Then this training set will be used for both training and cross-validation. This approach does not waste too much of training data eventhough it is computationally expensive. As there is no fixed cross-validation set, we can avoid our result being skewed too. So it can be used in grid search to identify the perfect value for the hyper-parameters.\n"
    ]
   },
   {
@@ -554,13 +597,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# TODO: Import 'make_scorer', 'DecisionTreeRegressor', and 'GridSearchCV'\n",
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.grid_search import GridSearchCV\n",
     "\n",
     "def fit_model(X, y):\n",
     "    \"\"\" Performs grid search over the 'max_depth' parameter for a \n",
@@ -572,18 +618,18 @@
     "    cv_sets = ShuffleSplit(X.shape[0], n_iter = 10, test_size = 0.20, random_state = 0)\n",
     "\n",
     "    # TODO: Create a decision tree regressor object\n",
-    "    regressor = None\n",
+    "    regressor = DecisionTreeRegressor()\n",
     "\n",
     "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
-    "    params = {}\n",
+    "    params = {'max_depth':np.array([1,2,3,4,5,6,7,8,9,10])}\n",
     "\n",
     "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
-    "    scoring_fnc = None\n",
+    "    scoring_fnc = make_scorer(performance_metric)\n",
     "\n",
     "    # TODO: Create the grid search cv object --> GridSearchCV()\n",
     "    # Make sure to include the right parameters in the object:\n",
     "    # (estimator, param_grid, scoring, cv) which have values 'regressor', 'params', 'scoring_fnc', and 'cv_sets' respectively.\n",
-    "    grid = None\n",
+    "    grid = GridSearchCV('regressor','params', scoring='scoring_fnc', cv='cv_sets')\n",
     "\n",
     "    # Fit the grid search object to the data to compute the optimal model\n",
     "    grid = grid.fit(X, y)\n",
