--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -872,7 +872,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "\n",
+    "* The data which has been collected almost 40 years back can't be relevant today. Over the years, many things would have changed. Currency value would have dropped.\n",
+    "\n",
+    "* No, the features taken into consideration in this project is actually not enough to describe a home. Quality of appliances, square feet area and the presence of pool plays a big role in price estimation. Also other features like age of the house, nearby shopping points, distance from train stations may also be taken into account.\n",
+    "\n",
+    "* As calculated above, the range is 73,357.39 dollars. If we consider a house of price 454,342.94 dollars(which is the mean price), if this model predicts prices with the same range 73,357, then, it is 16% of the selling price. Having 16% of selling price as range itself proves this is not a robust model. Predictions are not consistent.\n",
+    "\n",
+    "* A model which is built for urban city will not be applicable for rural city. For rural city, we need to take features which are relevant to rural environment to make predictions.\n",
+    "\n",
+    "* Yes, it is fair to judge the price of an individual home based on the characteristics of the entire neighbourhood. Also, there would be other features apart form neighbourhood, which would describe the house only. The characteristics of the house and the characteristics of the neighbourhood go together.\n",
+    "\n",
+    "\n"
    ]
   },
   {
