--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -395,7 +395,7 @@
     "\n",
     "The top right graph:Maximum depth is 3.\n",
     "\n",
-    "As more training points are added, the score of the training curve decreases, but, the score of the testing curve increases. But if the training set size is too large, then the score of the training set will remain high, while the score of the testing set will remain low.\n",
+    "As more training points are added, the score of the training curve decreases, but he score of the testing curve increases.\n",
     "\n",
     "There must be a trade-off in choosing the number of training points. Not too few. Not too large. Because we don't need an underfitting or overfitting model. We need our model to be just right."
    ]
