--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -501,8 +501,8 @@
     "**Answer: **\n",
     "\n",
     "#### Grid Search Technique:\n",
-    "* If there is more than one hyper-parameter, the best way to find the suitable one is to form a grid with all the possible values of hyper-parameter, and tabulate the F1-score of each of them. \n",
-    "* Grid Search can be used to optimize the learning algorithm by the value of the F1 score obtained. High F1 score indicates a good model.\n",
+    "* If there is more than one hyper-parameter, each of which have some possible values, the best way to find the best possible value is to form a grid with all the possible values of hyper-parameter, and tabulate the F1-score of each of them. \n",
+    "* Grid Search can be used to optimize the learning algorithm by running the model several times with all possible valus of hyper parameters and calculate the value of the F1 score each time. Finally the values which yielded the highest F1 score are the optimal values of the hyper parameter for the chosen model.\n",
     "#### Example:\n",
     "\n",
     "<i>Support Vector Machine</i> has more than one hyper-parameter like : <i>kernel, gamma</i>. <i>Kernel</i> can take values like <i>Linear/Polynomial</i>. <i>Gamma</i> can take exponential values. We can form a table with two possibilities of <i>kernel</i> and many different possibilities of <i>gamma</i>, and find the one with the highest F1 score. This is how we optimize an svm."
