--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -568,9 +568,11 @@
     "\n",
     "#### Benefits:\n",
     "\n",
-    "In traditional approach, we will be having fixed training, cross-validation and testing sets. In big data sets this will not be a proble. But in small datasets, after splitting like this, we will not be having enough data to train our model. \n",
+    "In traditional approach, we will be having fixed training, cross-validation and testing sets. In big data sets this will not be a problem. But in small datasets, after splitting like this, we will not be having enough data to train our model. \n",
     "\n",
-    "So we go for k fold cross validation in which we don't have a fixed set for cross-validation. The data set will be split into training and testing sets. Then this training set will be used for both training and cross-validation. This approach does not waste too much of training data eventhough it is computationally expensive. As there is no fixed cross-validation set, we can avoid our result being skewed too. So it can be used in grid search to identify the perfect value for the hyper-parameters.\n"
+    "So we go for k fold cross validation in which we don't have a fixed set for cross-validation. The data set will be split into training and testing sets. Then this training set will be used for both training and cross-validation. This approach does not waste too much of training data eventhough it is computationally expensive. As there is no fixed cross-validation set, we can avoid our result being skewed too. \n",
+    "\n",
+    "<i>It can be used in grid search to identify the perfect value for the hyper-parameter, in this case, the value of 'k'.</i>"
    ]
   },
   {
